# ahorcado-tdd

./: .envrc  .pylintrc  Procfile  README.md  ahorcado.py  bootstrap.sh  invoke.yaml  setup.cfg  setup.py  test_ahorcado.py  tox.ini
.github/workflows/: github-actions-test.yml  github-actions.yml
ahorcado/: ahorcado.py
backend/: .dockerignore  Dockerfile  Procfile  bootstap.sh  invoke.yaml  main.py  requirements.txt  setup.py  test_ahorcado.py
backend/ahorcado/: ahorcado.py
backend/features/: arriesgar_letras.feature  arriesgar_palabras.feature  login.feature
backend/features/steps/: arriesgar_letras.py  arriesgar_palabras.py  common.py  login.py
backend/py.requirements/: basic.txt
features/: jugar-una-partida.feature  login.feature
features/steps/: jugar-una-partida.py  login.py  tutorial.py
frontend/: Dockerfile  README.md  angular.json  package-lock.json  package.json  server.js  tests.js
frontend/src/: env.ts  index.html  styles.scss
frontend/src/app/: ahorcado.service.ts  app-routing.module.ts  app.component.html  app.component.scss  app.module.ts  env.ts
frontend/src/app/game/: game.component.html  game.component.ts
frontend/src/app/login/: login.component.html  login.component.ts
frontend/src/app/models/: Partida.ts
frontend/src/app/new-game/: new-game.component.html  new-game.component.ts
frontend/src/environments/: environment.prod.ts
frontend/tests/: test.js
py.requirements/: basic.txt  develop.txt
src/ahorcado/: ahorcado.py
tasks/: __init__.py
tests/: test_ahorcado.py
(+1 files in other folders)
