[aliases]
test = behave_test

[behave_test]
format = progress3
tags   = -@xfail
args   = features datatypes.features step_matcher.features

[metadata]
name = ahorcado
description = slap that like button
author = James Murphy
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    ahorcado
install_requires =
  behave>=1.2.6
  PyHamcrest>=1.9
  parse>=1.8.2
  parse_type>=0.4.2
  six>=1.11.0

python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
